--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@uppy/core": "^5.1.1",
+    "@uppy/dashboard": "^5.0.4",
+    "@uppy/image-editor": "^4.0.2",
+    "@uppy/react": "^5.1.1",
+    "@uppy/webcam": "^5.0.2",
+    "@uppy/xhr-upload": "^5.0.2",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
+    "heic-convert": "^2.1.0",
+    "heic2any": "^0.0.4",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
